--- a/weathermap.html
+++ b/weathermap.html
@@ -7,9 +7,6 @@
     <title>Photon Life</title>
 
 
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
@@ -19,7 +16,6 @@
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.css' rel='stylesheet' />
 
     <!-- BootStrap -->
-
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <!-- StyleSheet -->
@@ -28,8 +24,7 @@
     <!--    //favcon-->
     <link rel="icon" type="image/png" sizes="16x16" href="https://live.staticflickr.com/65535/51320697245_9708355788_c.jpg">
 
-
-    <!--    &lt;!&ndash;- J Query &ndash;&gt;-->
+<!--    &lt;!&ndash;- J Query &ndash;&gt;-->
 
 <!--    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>-->
 
@@ -91,6 +86,9 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="aboutme.html">about me</a>
+                </li>
+                <li>
+                    <a class="nav-item" id="clock">01:20am</a>
                 </li>
             </ul>
 
@@ -342,27 +340,17 @@
 
 </script>
 
+    ## clock
+    <script>
+
+    </script>
+
 
 
 <!--- MapBox CDN --->
 
 
 <link href='https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.css' rel='stylesheet' />
-
-    <!--&lt;!&ndash; Latest compiled JavaScript &ndash;&gt;-->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-
-
-
-
-
-    <!-- jQuery library -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
-    <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
-
 
 
 
